--- a/angular-simpliKart-admin/package.json
+++ b/angular-simpliKart-admin/package.json
@@ -17,7 +17,10 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ngx-translate/core": "^16.0.4",
     "angular-simpli-kart-admin": "file:",
+    "bootstrap": "^5.3.5",
+    "node": "^23.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
