--- a/angular-simpliKart-admin/angular.json
+++ b/angular-simpliKart-admin/angular.json
@@ -25,6 +25,7 @@
                "src/favicon.ico"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -88,5 +89,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
