--- a/angular-simpliKart-admin/package.json
+++ b/angular-simpliKart-admin/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^8.0.0",
     "angular-simpli-kart-admin": "file:",
     "bootstrap": "^5.3.5",
     "node": "^23.11.0",
