translate functionality fixed

--- a/angular-simpliKart-admin/package.json
+++ b/angular-simpliKart-admin/package.json
@@ -17,8 +17,10 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@popperjs/core": "^2.11.8",
     "angular-simpli-kart-admin": "file:",
     "bootstrap": "^5.3.5",
     "node": "^23.11.0",
